--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@
 # Kotlin
 version=1.6.0-SNAPSHOT
 group=org.jetbrains.kotlinx
-kotlin_version=1.6.0
+kotlin_version=1.7.0-dev-1132
 
 # Dependencies
 junit_version=4.12
