--- a/kotlinx-coroutines-core/build.gradle
+++ b/kotlinx-coroutines-core/build.gradle
@@ -89,37 +89,37 @@ kotlin {
             binaries.getTest("DEBUG").freeCompilerArgs += ["-e", "kotlinx.coroutines.mainNoExit"]
         }
 
-        binaries.test("newMM", [DEBUG]) {
-            def thisTest = it
-            freeCompilerArgs += ["-e", "kotlinx.coroutines.mainNoExit"]
-            optimized = true
-            binaryOptions["memoryModel"] = "experimental"
-            testRuns.create("newMM") {
-                setExecutionSourceFrom(thisTest)
-                // A hack to get different suffixes in the aggregated report.
-                executionTask.configure { targetName = "$targetName new MM" }
-            }
-        }
-
-        binaries.test("worker",  [DEBUG]) {
-            def thisTest = it
-            freeCompilerArgs += ["-e", "kotlinx.coroutines.mainBackground"]
-            testRuns.create("worker") {
-                setExecutionSourceFrom(thisTest)
-                executionTask.configure { targetName = "$targetName worker" }
-            }
-        }
-
-        binaries.test("workerWithNewMM", [DEBUG]) {
-            def thisTest = it
-            optimized = true
-            freeCompilerArgs += ["-e", "kotlinx.coroutines.mainBackground"]
-            binaryOptions["memoryModel"] = "experimental"
-            testRuns.create("workerWithNewMM") {
-                setExecutionSourceFrom(thisTest)
-                executionTask.configure { targetName = "$targetName worker with new MM" }
-            }
-        }
+//        binaries.test("newMM", [DEBUG]) {
+//            def thisTest = it
+//            freeCompilerArgs += ["-e", "kotlinx.coroutines.mainNoExit"]
+//            optimized = true
+//            binaryOptions["memoryModel"] = "experimental"
+//            testRuns.create("newMM") {
+//                setExecutionSourceFrom(thisTest)
+//                // A hack to get different suffixes in the aggregated report.
+//                executionTask.configure { targetName = "$targetName new MM" }
+//            }
+//        }
+//
+//        binaries.test("worker",  [DEBUG]) {
+//            def thisTest = it
+//            freeCompilerArgs += ["-e", "kotlinx.coroutines.mainBackground"]
+//            testRuns.create("worker") {
+//                setExecutionSourceFrom(thisTest)
+//                executionTask.configure { targetName = "$targetName worker" }
+//            }
+//        }
+//
+//        binaries.test("workerWithNewMM", [DEBUG]) {
+//            def thisTest = it
+//            optimized = true
+//            freeCompilerArgs += ["-e", "kotlinx.coroutines.mainBackground"]
+//            binaryOptions["memoryModel"] = "experimental"
+//            testRuns.create("workerWithNewMM") {
+//                setExecutionSourceFrom(thisTest)
+//                executionTask.configure { targetName = "$targetName worker with new MM" }
+//            }
+//        }
     }
 
     jvm {
@@ -241,6 +241,7 @@ task jvmStressTest(type: Test, dependsOn: compileTestKotlinJvm) {
     systemProperty 'kotlinx.coroutines.scheduler.keep.alive.sec', '100000' // any unpark problem hangs test
     systemProperty 'kotlinx.coroutines.semaphore.segmentSize', '2'
     systemProperty 'kotlinx.coroutines.semaphore.maxSpinCycles', '10'
+    systemProperty 'kotlinx.coroutines.bufferedChannel.segmentSize', '2'
 }
 
 task jvmLincheckTest(type: Test, dependsOn: compileTestKotlinJvm) {
@@ -259,6 +260,7 @@ static void configureJvmForLincheck(task) {
                     '--add-exports', 'java.base/jdk.internal.util=ALL-UNNAMED'] // in the model checking mode
     task.systemProperty 'kotlinx.coroutines.semaphore.segmentSize', '2'
     task.systemProperty 'kotlinx.coroutines.semaphore.maxSpinCycles', '1' // better for the model checking mode
+    task.systemProperty 'kotlinx.coroutines.bufferedChannel.segmentSize', '2'
 }
 
 // Always check additional test sets
