--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@
 # Kotlin
 version=1.6.0-SNAPSHOT
 group=org.jetbrains.kotlinx
+# TODO: not dev version
 kotlin_version=1.7.0-dev-1132
 
 # Dependencies
