Update Kotlin to 1.6.20-RC

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 version=1.6.0-SNAPSHOT
 group=org.jetbrains.kotlinx
 # TODO: not dev version
-kotlin_version=1.7.0-dev-1132
+kotlin_version=1.6.20-RC2
 
 # Dependencies
 junit_version=4.12
